[gd_scene load_steps=10 format=3 uid="uid://vcaloblp0bi6"]

[ext_resource type="Script" uid="uid://cqlg3suskb2hv" path="res://scripts/menus/settings_menu.gd" id="1_pgun7"]
[ext_resource type="FontFile" uid="uid://b2qsse7qo1d8y" path="res://assets/Gugi-Regular.ttf" id="2_4werv"]
[ext_resource type="Shader" uid="uid://f0odfx5f7dvb" path="res://scripts/shaders/star.gdshader" id="2_da10i"]
[ext_resource type="Shader" uid="uid://dpbmrgdgioq6r" path="res://scripts/shaders/ScanLineShader.gdshader" id="5_jjfif"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_kffdn"]
shader = ExtResource("2_da10i")
shader_parameter/bg_color = Color(0, 0, 0, 1)
shader_parameter/offset = Vector2(0, 0)
shader_parameter/bigStarSlow = 2.0
shader_parameter/mediumStarSlow = 6.0
shader_parameter/smallStarSlow = 8.0
shader_parameter/smallStarAmount = 0.002
shader_parameter/mediumStarAmount = 0.01
shader_parameter/bigStarAmount = 0.02
shader_parameter/pixelSize = 3.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_komaw"]
shader = ExtResource("5_jjfif")
shader_parameter/scanline_strength = 0.2
shader_parameter/glitch_intensity = 0.3
shader_parameter/speed = 1.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fq4y8"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15
corner_detail = 20

[sub_resource type="ShaderMaterial" id="ShaderMaterial_qnuys"]
shader = ExtResource("5_jjfif")
shader_parameter/scanline_strength = 0.2
shader_parameter/glitch_intensity = 0.3
shader_parameter/speed = 1.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_eoonq"]
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0.8, 0.8, 0.8, 0)
border_blend = true
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30
corner_detail = 20

[node name="MainMenu" type="Control" node_paths=PackedStringArray("_master", "_music", "_enviroment", "_v_sync", "start_focus")]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_pgun7")
_master = NodePath("SettingsContainer/ScrollContainer/VBoxContainer/Master/MasterSlider")
_music = NodePath("SettingsContainer/ScrollContainer/VBoxContainer/Music/MuseSlider")
_enviroment = NodePath("SettingsContainer/ScrollContainer/VBoxContainer/Enviroment/EnvSlider")
_v_sync = NodePath("SettingsContainer/ScrollContainer/VBoxContainer/V-Sync")
start_focus = NodePath("NinePatchRect/Back")
metadata/_edit_use_anchors_ = true

[node name="ColorRect" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_kffdn")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0.27451, 0.541176, 1)

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.410547
anchor_top = 0.170139
anchor_right = 0.589453
anchor_bottom = 0.250694
offset_left = 56.5
offset_top = 20.5
offset_right = -56.5
offset_bottom = -20.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0.156863, 0.247059, 1)
theme_override_font_sizes/font_size = 56
text = "Settings"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="NinePatchRect" type="PanelContainer" parent="."]
material = SubResource("ShaderMaterial_komaw")
layout_mode = 2
offset_left = 577.999
offset_top = 604.0
offset_right = 705.999
offset_bottom = 652.0
theme_override_styles/panel = SubResource("StyleBoxFlat_fq4y8")
metadata/_edit_use_anchors_ = true

[node name="Back" type="Button" parent="NinePatchRect"]
layout_mode = 2
theme_override_colors/font_hover_pressed_color = Color(0.129558, 0.129558, 0.129558, 1)
theme_override_colors/font_hover_color = Color(0.384314, 0.384314, 0.384314, 1)
theme_override_colors/font_color = Color(0.537011, 0.537011, 0.537011, 1)
theme_override_colors/font_focus_color = Color(0.384314, 0.384314, 0.384314, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_4werv")
theme_override_font_sizes/font_size = 20
text = "Back"
flat = true

[node name="SettingsContainer" type="PanelContainer" parent="."]
material = SubResource("ShaderMaterial_qnuys")
custom_minimum_size = Vector2(320, 350)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.375
anchor_top = 0.256944
anchor_right = 0.625
anchor_bottom = 0.743056
offset_left = 1.0
offset_right = -1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_eoonq")
metadata/_edit_use_anchors_ = true

[node name="ScrollContainer" type="ScrollContainer" parent="SettingsContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="SettingsContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 10
alignment = 1

[node name="Message" type="RichTextLabel" parent="SettingsContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
bbcode_enabled = true
text = "
[center][color=HotPink]Sound[/color][/center]"
fit_content = true

[node name="Master" type="HBoxContainer" parent="SettingsContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="SettingsContainer/ScrollContainer/VBoxContainer/Master"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0.537255, 0.537255, 0.537255, 1)
text = "Master"

[node name="MasterSlider" type="HSlider" parent="SettingsContainer/ScrollContainer/VBoxContainer/Master"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
value = 100.0

[node name="Music" type="HBoxContainer" parent="SettingsContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="SettingsContainer/ScrollContainer/VBoxContainer/Music"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0.537255, 0.537255, 0.537255, 1)
text = "Music"

[node name="MuseSlider" type="HSlider" parent="SettingsContainer/ScrollContainer/VBoxContainer/Music"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
value = 100.0

[node name="Enviroment" type="HBoxContainer" parent="SettingsContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="SettingsContainer/ScrollContainer/VBoxContainer/Enviroment"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0.537255, 0.537255, 0.537255, 1)
text = "Enviroment"

[node name="EnvSlider" type="HSlider" parent="SettingsContainer/ScrollContainer/VBoxContainer/Enviroment"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
value = 100.0

[node name="Message2" type="RichTextLabel" parent="SettingsContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
bbcode_enabled = true
text = "
[center][color=HotPink]Graphics[/color][/center]"
fit_content = true

[node name="V-Sync" type="CheckButton" parent="SettingsContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_disabled_color = Color(0.787759, 0.787759, 0.787759, 1)
theme_override_colors/font_hover_pressed_color = Color(0.537255, 0.537255, 0.537255, 1)
theme_override_colors/font_hover_color = Color(0.537255, 0.537255, 0.537255, 1)
theme_override_colors/icon_disabled_color = Color(0.537255, 0.537255, 0.537255, 1)
theme_override_colors/icon_hover_pressed_color = Color(0.537255, 0.537255, 0.537255, 1)
theme_override_colors/icon_hover_color = Color(0.537255, 0.537255, 0.537255, 1)
theme_override_colors/icon_pressed_color = Color(0.537255, 0.537255, 0.537255, 1)
theme_override_colors/icon_focus_color = Color(0.537255, 0.537255, 0.537255, 1)
theme_override_colors/icon_normal_color = Color(0.537255, 0.537255, 0.537255, 1)
theme_override_colors/font_outline_color = Color(0.537255, 0.537255, 0.537255, 1)
theme_override_colors/font_color = Color(0.537255, 0.537255, 0.537255, 1)
theme_override_colors/font_focus_color = Color(0.537255, 0.537255, 0.537255, 1)
theme_override_colors/font_pressed_color = Color(0.537255, 0.537255, 0.537255, 1)
text = "V-Sync"

[connection signal="pressed" from="NinePatchRect/Back" to="." method="_on_back_pressed"]
[connection signal="drag_ended" from="SettingsContainer/ScrollContainer/VBoxContainer/Master/MasterSlider" to="." method="_on_master_slider_drag_ended"]
[connection signal="drag_ended" from="SettingsContainer/ScrollContainer/VBoxContainer/Music/MuseSlider" to="." method="_on_muse_slider_drag_ended"]
[connection signal="drag_ended" from="SettingsContainer/ScrollContainer/VBoxContainer/Enviroment/EnvSlider" to="." method="_on_env_slider_drag_ended"]
[connection signal="toggled" from="SettingsContainer/ScrollContainer/VBoxContainer/V-Sync" to="." method="_on_v_sync_toggled"]
